[package]
name = "RespOS"
version = "0.1.0"
edition = "2024"

[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
sbi-rt = { version = "0.0.3", features = ["legacy"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
buddy_system_allocator = "0.10.0"
bitflags = "1.2.1"
xmas-elf = "0.7.0"
lwext4_rust = { git = "https://github.com/elliott10/lwext4_rust", default-features = false }
virtio-drivers = "0.11.0"
spin = "0.9.8"
