[package]
name = "RespOS"
version = "0.1.0"
edition = "2024"

[features]
log = []

[[bin]]
name = "os"
path = "src/main.rs"

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
buddy_system_allocator = "0.10.0"
bitflags = "1.2.1"
xmas-elf = "0.7.0"
virtio-drivers = { version = "0.11.0", features = ["alloc"] }
spin = "0.9.8"
smoltcp = { version = "0.11", default-features = false, features = ["alloc", "log", "medium-ethernet", "medium-ip", "proto-ipv4", "proto-ipv6", "socket-tcp", "socket-udp"] }
hashbrown = "0.16.1"
lwext4_rust = { path = "../vendor/lwext4_rust", default-features = false }

[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv = { path = "../vendor/riscv", features = ["inline-asm"] }
sbi-rt = { version = "0.0.3", features = ["legacy"] }
